deploymentproxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy-manager
  template:
    metadata:
      labels:
        app: nginx-proxy-manager
    spec:
      containers:
        - name: app
          image: jc21/nginx-proxy-manager:latest
          ports:
            - containerPort: 80    # HTTP
            - containerPort: 81    # Admin UI
            - containerPort: 443   # HTTPS
