ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "my-app-ip"
    networking.gke.io/managed-certificates: managed-certt
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
  - host: proxy.studiesaws.xyz
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-proxy-manager
            port:
              number: 81
